collapse bug fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,12 +4,4 @@ body {
         background-image: url("../assets/img/background.jpg");
         
       }
-
-/*logo style*/
-  #logo{
-   width:100px; 
-    height:100px;
-    width:100px; 
-    height: 100px; 
-    border: 0;
-  }
+      
